fix : design align

--- a/frontend/src/routes/MyPageorigin.css
+++ b/frontend/src/routes/MyPageorigin.css
@@ -10,56 +10,38 @@
   justify-content: left;
   align-items: center;
   padding: 20px;
-  margin: 10px 10px 20px 10px;
-  width: 94%;
-  border: 1.5px solid #100db1;
   border-radius: 10px;
-  font-size: medium;
-}
-
-.info-table {
-  width: 100%;
-  border-collapse: collapse;
-
-  tr {
-    display: grid;
-    grid-template-columns: 25% auto 15% 15% 30%;
+  width: calc(100%-20px);
+  border: 1.5px solid #100db1;
+  margin: 10px 10px 20px 10px;
+  vertical-align: middle;
+  img {
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    margin: 10px 20px;
+  }
+  .info {
+    display: inline-block;
+    height: 104px;
+    padding: 0px 1em;
+    p {
+      font-weight: lighter;
+      padding-top: 10px;
+      padding-bottom: 2px;
+    }
+    .pbold {
+      font-weight: bold;
+      padding: 10px 0px;
+    }
   }
 }
 
-.profile-img {
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
-  margin-left: 20px;
-  margin-right: 30px;
-}
-
-.label {
-  font-weight: bold;
-  padding: 10px;
-}
-
-.value {
-  padding: 10px;
-}
-
-.ticket-link {
-  width: 15px;
-  height: 15px;
-  padding: 0;
-  margin: 0;
-}
-
-.ticket-linktext {
-  padding-left: 5px;
-}
-
 .button-box {
-  text-align: right;
-  display: flex;
-  align-items: top;
+  margin-left: auto;
+  height: 104px;
 }
+
 .button-box button {
   background-color: #100db1;
   color: #ffffff;
